# nuriemon

./: .gitignore  AGENTS.md  CLAUDE.md  RELEASE.md  REQUIREMENTS.md  REQUIREMENTS_v2.md  index.html  new.md  package-lock.json  package.json  qr-display.html  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-windows.yml
apps/license-api/: package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
apps/relay-worker/: MIGRATION_PLAN.md  README.md  package.json  tsconfig.json  wrangler.toml
docs/: OPERATIONS.md  secure-secrets.md  sidecar.md
python-sidecar/: build_sidecar_macos.sh  main.py  requirements.txt  setup.sh
scripts/: build-macos-dmg-intel.sh  build-macos-dmg.sh  sign-macos.sh
src/: App.module.scss  App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: entitlements-sidecar.plist
src-tauri/resources/: global_settings.json  global_settings.json.example  global_settings.studio.json
src-tauri/resources/ja.lproj/: InfoPlist.strings
src-tauri/resources/python-sidecar/: README.txt
src-tauri/resources/python-sidecar-fallback/: README.txt
src-tauri/src/: db.rs  events.rs  file_watcher.rs  lib.rs  main.rs  qr_manager.rs  server_state.rs  web_server.rs  websocket.rs  workspace.rs
src/components/: AnimationPage.module.scss  AnimationPage.tsx  AnimationPageSimple.tsx  AnimationView.module.scss  AnimationView.tsx  AudioSettings.module.scss  AudioSettings.tsx  BackgroundRemover.module.scss  (+28 more)
static/: share.html
(+46 files in other folders)
