[package]
name = "nuriemon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nuriemon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
notify = "6.1"
base64 = "0.22"
once_cell = "1.20"
rand = "0.8"
actix-web = "4"
actix-web-actors = "4"
actix-ws = "0.3"
rust-embed = { version = "8", features = ["compression", "debug-embed"] }
qrcode = "0.14"
local-ip-address = "0.6"
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
futures-util = "0.3"
mime = "0.3"
keyring = "2"
